--- a/public/assets/font/demo_unicode.html
+++ b/public/assets/font/demo_unicode.html
@@ -153,6 +153,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe653;</i>
+                    <div class="name">验证码</div>
+                    <div class="code">&amp;#xe653;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe614;</i>
                     <div class="name">关闭_</div>
                     <div class="code">&amp;#xe614;</div>
