--- a/public/assets/font/demo_fontclass.html
+++ b/public/assets/font/demo_fontclass.html
@@ -133,6 +133,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-yanzhengma"></i>
+                    <div class="name">验证码</div>
+                    <div class="fontclass">.icon-yanzhengma</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-guanbi-copy"></i>
                     <div class="name">关闭_</div>
                     <div class="fontclass">.icon-guanbi-copy</div>
