--- a/public/assets/font/demo_symbol.html
+++ b/public/assets/font/demo_symbol.html
@@ -189,6 +189,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-yanzhengma"></use>
+                    </svg>
+                    <div class="name">验证码</div>
+                    <div class="fontclass">#icon-yanzhengma</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-guanbi-copy"></use>
                     </svg>
                     <div class="name">关闭_</div>
