活动页面组件

--- a/public/assets/font/demo_symbol.html
+++ b/public/assets/font/demo_symbol.html
@@ -205,6 +205,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-ai-connection"></use>
+                    </svg>
+                    <div class="name">人脉</div>
+                    <div class="fontclass">#icon-ai-connection</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-jubao1"></use>
                     </svg>
                     <div class="name">举报</div>
