--- a/public/assets/font/demo_fontclass.html
+++ b/public/assets/font/demo_fontclass.html
@@ -145,6 +145,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-ai-connection"></i>
+                    <div class="name">人脉</div>
+                    <div class="fontclass">.icon-ai-connection</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-jubao1"></i>
                     <div class="name">举报</div>
                     <div class="fontclass">.icon-jubao1</div>
