--- a/public/assets/font/demo_unicode.html
+++ b/public/assets/font/demo_unicode.html
@@ -165,6 +165,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe662;</i>
+                    <div class="name">人脉</div>
+                    <div class="code">&amp;#xe662;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe61d;</i>
                     <div class="name">举报</div>
                     <div class="code">&amp;#xe61d;</div>
